Integrar Context7 e sanitizar dados